infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: petarnenov/blog-posts   
---
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-srv
spec: 
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 3021
    targetPort: 3021
