infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: query-srv
            port: 
              number: 3023
      - pathType: Prefix
        path: /posts/create
        backend:
          service:
            name: posts-cluster-srv
            port: 
              number: 3021
      - pathType: Prefix
        path: /posts/?(.*)/comments
        backend:
          service:
            name: comments-srv
            port: 
              number: 3022
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
